--- a/RocketryMath/RocketryMath.csproj
+++ b/RocketryMath/RocketryMath.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="IFormulaBinder.cs" />
     <Compile Include="Interfaces\IFormula.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Formulas\GhostParachuteSize.cs" />
@@ -2110,6 +2111,7 @@
     <Content Include="Views\Shared\_Layout_default.cshtml" />
     <Content Include="Views\Shared\_SideNavigation.cshtml" />
     <Content Include="Views\Shared\_RocketMaterialsNavigation.cshtml" />
+    <Content Include="Views\Shared\VariableEditor.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
