--- a/Units/Units.csproj
+++ b/Units/Units.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Distance.cs" />
     <Compile Include="IUnit.cs" />
     <Compile Include="Mass.cs" />
+    <Compile Include="Pressure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Temperature.cs" />
     <Compile Include="Types.cs" />
